# bitstream-c

./: Makefile.am  configure.ac
src/: bitstream.c  bitstream.h
tests/: test1.c  test2.c  test3.c
